fixed bug related to wildcard text andn title overlapping

--- a/uniuggla/app/globals.css
+++ b/uniuggla/app/globals.css
@@ -762,6 +762,7 @@ header img {
 	font-size: 1.6vw;
 	font-family: Tomorrow-SemiBold !important;
 	color: var(--primary-dark-purple);
+	max-width: 90%;
 }
 .wildcardText {
 	font-family: Tomorrow-Medium;
